# modbus_simple_logger

./: .gitignore  AGENTS.md  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
.github/: FUNDING.yml
.github/workflows/: deploy.yml  tauri-release.yml
launcher/: browser.ts  build.ts  generate-embed.ts  generate-icon.ts  main.ts  server.ts
public/: manifest.json  sw.js
src/: App.tsx  constants.ts  index.css  main.tsx  plotly.ts  pyodideWorker.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: AppHeader.tsx  AppInfoPanel.tsx  CalibrationPanel.tsx  CalibrationRow.tsx  CalibrationWorkbench.tsx  ChannelSelector.tsx  ChartPanel.tsx  FloatingWindow.tsx  HX711CalibrationPanel.tsx  HamburgerMenu.tsx  LiveChart.tsx  LiveReadingBanner.tsx  ManualPanel.tsx  ModbusConfigPanel.tsx  ModeSelector.tsx  RegressionPlot.tsx  RegressionResultPanel.tsx  ScriptRunnerPanel.tsx  SlidePanel.tsx  ThemeToggle.tsx  VoltageConfigPanel.tsx
src/hooks/: useCalibration.ts  useChartAxes.ts  useHx711Live.ts  useScriptRunner.ts  useTheme.ts
src/modbus/: modbusClientBase.ts  tauriModbusClient.ts  webserialClient.ts  webusbClient.ts
src/tauri/: runtime.ts
src/types/: modules.d.ts
src/utils/: calibration.test.ts  calibration.ts  cookies.node.test.ts  cookies.test.ts  cookies.ts  crc16.test.ts  crc16.ts  csvExport.test.ts  csvExport.ts  (+8 more)
wiki/: calibration.md  design-strain-calibrator.md  log.md  polling.md
