[package]
name = "modbus_simple_logger"
version = "3.0.0"
description = "Modbus RTU logger Tauri host"
edition = "2021"
rust-version = "1.77"
default-run = "modbus_simple_logger"

[lib]
name = "modbus_simple_logger_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serialport = "4"
